# repairshopr_api

./: .gitignore  AGENTS.md  README.md  TODO.md  mypy.ini  pyproject.toml  repairshopr_sync.service  run_django.py
.github/: dependabot.yml  github-repo-workflow.json  github.json
.github/workflows/: deploy-dokploy.yml  publish.yml  tests.yml
config/: __init__.py  base.py  display_settings.py  initialize.py  serializable.py
config/sections/: __init__.py  django.py  repairshopr.py
docker/: Dockerfile.sync
docker/coolify/: compose.yml  repairshopr-sync.yml
docs/ops/: repairshopr-sync-confidence-runbook.md
repairshopr_api/: client.py  run_django.py  type_defs.py
repairshopr_api/base/: fields.py  model.py
repairshopr_api/config/: base.py  display_settings.py  serializable.py
repairshopr_api/models/: estimate.py  invoice.py  product.py  ticket.py  user.py
repairshopr_api/utils/: __init__.py  datetime.py
repairshopr_sync/: manage.py
repairshopr_sync/repairshopr_data/: admin.py
repairshopr_sync/repairshopr_data/management/commands/: flush.py  import_from_repairshopr.py  reconcile_invoice_line_items.py  sync_status.py
repairshopr_sync/repairshopr_data/migrations/: 0001_initial.py  0001_squashed_0014_alter_ticketcomment_body_collation_portable.py  0008_alter_ticketcomment_body.py  0012_add_ticket_settings_tables.py  0013_add_api_fields.py  0014_alter_ticketcomment_body_collation_portable.py  0015_add_sync_status.py
repairshopr_sync/repairshopr_data/models/: __init__.py  customer.py  estimate.py  invoice.py  payment.py  product.py  sync_status.py  ticket.py  ticket_settings.py
repairshopr_sync/repairshopr_sync/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: check-lockfile.sh  repairshopr-sync-entrypoint.sh
tests/: conftest.py  django_settings.py  django_settings_migration.py  django_settings_mysql.py
tests/api/: test_base_model.py  test_client.py  test_config_serializable.py  test_datetime_utils.py  test_related_field.py  test_user.py
tests/integration/: test_mysql_schema.py
tests/scripts/: test_entrypoint.py  test_run_django_entrypoints.py
tests/sync/: test_import_command.py  test_reconcile_invoice_line_items_command.py  test_sync_status_command.py
