[project]
name = "repairshopr-api"
version = "0.4.4"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Chris Busillo", email = "info@shinycomputers.com" },
]
dependencies = [
    "toml>=0.10.2",
    "requests>=2.31.0",
    "pytz>=2023.3.post1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.1"]
sync = [
    "django>=5.0.1",
    "mysqlclient>=2.2.1",
]

[project.scripts]
server = "repairshopr_api.run_django:runserver"
makemigrations = "repairshopr_api.run_django:makemigrations"
migrate = "repairshopr_api.run_django:migrate"
import = "repairshopr_api.run_django:import_from_repairshopr"

[dependency-groups]
dev = [
    "black>=23.10.1",
    "django>=5.0.1",
    "django-stubs[compatible-mypy]>=4.2.6",
    "freezegun>=1.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "types-requests>=2.31.0.10",
    "types-toml>=0.10.8.7",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repairshopr_api", "repairshopr_sync"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--strict-config --strict-markers --cov --cov-report=term-missing --cov-fail-under=80"
DJANGO_SETTINGS_MODULE = "tests.django_settings"
markers = [
    "django_db: mark test as requiring the Django test database",
    "integration: marks tests as integration-level",
    "scripts: marks shell entrypoint tests",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = [
    "repairshopr_api.base.model",
    "repairshopr_api.client",
    "repairshopr_api.models.user",
    "repairshopr_data.management.commands.import_from_repairshopr",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
